examples/test/testpolicy13638.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13638
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key12: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value49
          key46: value49
          key42: value47
      podSelector:
        matchLabels:
          key32: value20
          key28: value49
